# SelfClaw

./: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json
.claude/: settings.local.json
.github/workflows/: ci.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: AutomationPanel.tsx  ChatInterface.tsx  ChatSandbox.tsx  ClawHubPanel.tsx  ConnectionsPanel.tsx  ConsoleShell.tsx  DashboardPanel.tsx  EnvironmentCheck.tsx  IMChannelsPanel.tsx  Layout.tsx  LoadingSpinner.tsx  MarkdownMessage.tsx  MemoryCenter.tsx  ModulePlaceholder.tsx  Onboarding.tsx  SettingsPanel.tsx  Sidebar.tsx  TitleBar.tsx
src/components/ui/: Button.tsx  Card.tsx  Input.tsx  ScrollArea.tsx  Switch.tsx  Tabs.tsx  index.ts
src/lib/: autoInstaller.ts  helpers.ts  models.ts  openclaw.ts  openclawSync.ts  tauriErrors.ts  utils.ts
src/store/: appStore.ts  indexedDbStorage.ts
