[package]
name = "selfclaw"
version = "0.1.0"
description = "SelfClaw - AI 助手管理客户端"
authors = ["SelfClaw Team"]
license = "MIT"
repository = "https://github.com/yourname/selfclaw"
edition = "2021"

[lib]
name = "selfclaw_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-ico"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-http = "2.5.7"
tokio = { version = "1", features = ["process", "time", "io-util"] }
ureq = "2"
zip = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
